# bootcamp

./: Dockerfile  README.md  pyproject.toml
ex-basics-1/: README.md  pyproject.toml
ex-basics-1/gayathri-hello/: __init__.py
ex-basics-1/gayathri_hello/: main.py
ex-basics-2/: README.md  pyproject.toml
ex-basics-2/gayathri-hello/: hello.py
ex-basics-2/gayathri_hello/: hello.py
ex-basics-3/: README.md  cli.py  pyproject.toml
gayathri-hello/: __init__.py  __main__.py  main.py
gayathri_hello/: cli.py
