[project]
name = "gayathri-hello-cli"
version = "0.3.1"
description = "A typer-based CLI hello world"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "rich",
    "typer>=0.16.1",
]

[project.scripts]
hello-cli = "cli:app"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true